@@ -1,4 +1,11 @@
+Authors:
+
 Fabian Kaiser <fabian@openhbci.de>
 Christian Stimming <stimming@tuhh.de>
+
+
+The authors would like to thank the following people for additional
+contributions:
+
 Jens Gecius <jens@gecius.de>
 Daniel Gloeckner <daniel-gl@gmx.net>
