@@ -1,3 +1,8 @@
+2004-01-02  Christian Stimming  <stimming@tuhh.de>
+
+	* AUTHORS: Add remark about authors and contributors. Add
+	copyright notices to other headers.
+
 2003-11-29  Christian Stimming  <stimming@tuhh.de>
 
 	* configure.in: Released version 0.6.
